--- a/project/web/index.html
+++ b/project/web/index.html
@@ -52,7 +52,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Key Key </h1>
-                    <p class="lead fw-normal text-white-50 mb-0">..............................</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Chất Lượng số một </p>
                 </div>
             </div>
         </header>
@@ -68,7 +68,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Bàn Phím Cơ....</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Logitech</h5>
                                     <!-- Product price-->
                                     500.000 VNĐ
                                 </div>
@@ -89,7 +89,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Bàn Phím Cơ....</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Keychron</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -119,7 +119,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">1</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Akko</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">500.000 VNĐ</span> </br>
                                     450.000 VNĐ
@@ -139,7 +139,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">2</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Dare-U</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -149,7 +149,7 @@
                                         <div class="bi-star-fill"></div>
                                     </div>
                                     <!-- Product price-->
-                                    690.000 VNĐ
+                                    1.430.000 VNĐ
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -168,7 +168,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">3</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Leopold</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">780.000 VNĐ</span> </br>
                                     550.000 VNĐ 
@@ -188,7 +188,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">4</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Corsair</h5>
                                     <!-- Product price-->
                                     1.650.000 VNĐ
                                 </div>
@@ -209,7 +209,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">5</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Razer</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -237,7 +237,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">6</h5>
+                                    <h5 class="fw-bolder">Bàn Phím Cơ Mistel</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
